[WEB-1204] Fix broken collapse animations caused by react-collapse upgrade

--- a/src/components/common/stat/Stat.css
+++ b/src/components/common/stat/Stat.css
@@ -29,6 +29,10 @@
   overflow: hidden;
 }
 
+:global(.statCollapse) {
+  transition: height 250ms;
+}
+
 .statFooter {
   display: flex;
   flex-wrap: nowrap;
